# mvg

./: .buildinfo  .gitignore  .pypirc  LICENSE  README.md  demos.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.dev.txt  requirements.txt  search.html  searchindex.js  tox.ini
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle  index.doctree
.github/workflows/: docs.yaml  tox.yaml
_modules/: index.html
_modules/mvg/: mvgapi.html
_sources/: index.rst.txt
docs/source/: conf.py  index.rst
src/mvg/: __init__.py  mvgapi.py
src/mvgapi/: __init__.py  mvgapi.py
tests/: test_demo.py
